Prática de tags básicas

--- a/módulo-5/1-HTML tags, atributos e valores/aulaTagBasica.html
+++ b/módulo-5/1-HTML tags, atributos e valores/aulaTagBasica.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minha Primeira Página</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>h1: Minha Página</h1>
     <h2>h2: Sub-titulo</h2>
     <h3>h3: Sub-titulo</h3>
@@ -14,7 +14,7 @@
     <h6>h6: Sub-titulo</h6>
     <p>Parágrafo:Meu primeiro parágrafo.</p>
     <i>Meu texto em Itálico</i>
-    <br>
+    <br />
     <b>Meu texto em Negrito</b>
-</body>
+  </body>
 </html>
