--- a/módulo-5/1-HTML tags, atributos e valores/tagSelfClosing.html
+++ b/módulo-5/1-HTML tags, atributos e valores/tagSelfClosing.html
@@ -10,7 +10,7 @@
             src="https://img.freepik.com/fotos-gratis/paisagem-de-nevoeiro-matinal-e-montanhas-com-baloes-de-ar-quente-ao-nascer-do-sol_335224-794.jpg"
             alt="paisagem"
         />
-        <img src="https://placehold.co/600x400" alt="Imagem Teste" />
+        <img src="https://placehold.co/600x400" alt="Exemplo com tamanho 600x400" />
         <hr />
         <a href="https://www.google.com.br/" target="_blank">Site do Google</a>
         <br />
