Aprendi sobre atributos id, hidden, src, alt, class

--- a/módulo-5/1-HTML tags, atributos e valores/atributos.html
+++ b/módulo-5/1-HTML tags, atributos e valores/atributos.html
@@ -6,7 +6,10 @@
         <title>Aula - Atributos</title>
     </head>
     <body>
-        <h1 id="pagina">Atributos</h1>
-        <h1 id="pagina">Atributos</h1>
+        <h1 id="pagina1">Atributos - 1 - ID</h1>
+        <h1 id="pagina2" hidden>Atributos - 2</h1>
+        <img src="https://placehold.400" alt="Exemplo com tamanho 600x400, Erro Proposital">
+        <h2 class="SubTitulo">Meu Sub-Titulo - Teste de Classe</h2>
+        <h2 class="SubTitulo">Meu Sub-Titulo - Teste de Classe</h2>
     </body>
 </html>
