Entendendo sobre px e porcentagem

--- a/módulo-5/2-Introducao-ao-css/unidadeDeMedita.html
+++ b/módulo-5/2-Introducao-ao-css/unidadeDeMedita.html
@@ -11,12 +11,12 @@
         section {
             background-color: blue;
             height: 600px;
-            width: 600px;
+            width: 600px; /* PX O TAMANHO É FIXO */
         }
         .section-porcentagem {
             background-color: orange;
             width: 60%;
-            height: 50%;
+            height: 50%; /* Com a % o tamanho fica dinâmico */
         }
         .imagem-porcentagem {
             width: 100%;
@@ -25,7 +25,7 @@
     </head>
     <body>
         <section>
-        <img src="https://placehold.co/600x400" alt="imagem teste" />
+        <img src="https://placehold.co/600x400" alt="teste" />
         <h1>Olá Medidas CSS</h1>
         <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique
@@ -38,7 +38,7 @@
         <img
             class="imagem-porcentagem"
             src="https://placehold.co/600x400"
-            alt="imagem teste"
+            alt="teste"
         />
         <h1>Olá Medidas CSS</h1>
         <p>
