--- a/módulo-5/2-Introducao-ao-css/unidadeDeMedita.html
+++ b/módulo-5/2-Introducao-ao-css/unidadeDeMedita.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Aula 7</title>
+        <title>Unidade de Medida</title>
         <style>
         html {
             background-color: red;
