Aprendendo sobre o Combinador ~

--- a/módulo-5/2-Introducao-ao-css/CSS PT.2/combinadoresSeletores~.html
+++ b/módulo-5/2-Introducao-ao-css/CSS PT.2/combinadoresSeletores~.html
@@ -8,13 +8,14 @@
 </head>
 <body>
 
-    <h1>Teste de Combinadores e Seletores (+)</h1>
+    <h1>Teste de Combinadores e Seletores (~)</h1>
     <div>
-        <span>Span dentro da DIV</span>
         <p>Parágrafo dentro da DIV</p>
+        <span>Span dentro da DIV</span>
+        <span>Span dentro da DIV</span>
+        <span>Span dentro da DIV</span>
+        <span>Span dentro da DIV</span>
     </div>
-    <p>Parágrafo fora da DIV</p>
     <span>Span fora da DIV</span>
-    <p>Parágrafo baixo do Span</p>
 </body>
 </html>
