Acrescentei tags h3 como explicação de todos os seletores

--- a/módulo-5/2-Introducao-ao-css/CSS PT.2/combinadoresSeletores+.html
+++ b/módulo-5/2-Introducao-ao-css/CSS PT.2/combinadoresSeletores+.html
@@ -9,6 +9,8 @@
 <body>
 
     <h1>Teste de Combinadores e Seletores (+)</h1>
+    <h3>Seleciona o primeiro elemento imediatamente após outro elemento específico.</h3>
+
     <div>
         <span>Span dentro da DIV</span>
         <p>Parágrafo dentro da DIV</p>
