--- a/módulo-5/2-Introducao-ao-css/CSS PT.2/combinadoresSeletoresMaior.html
+++ b/módulo-5/2-Introducao-ao-css/CSS PT.2/combinadoresSeletoresMaior.html
@@ -9,6 +9,8 @@
 <body>
 
     <h1>Teste de Combinadores e Seletores (>)</h1>
+    <h3>Seleciona apenas os elementos que são filhos diretos de um seletor específico.</h3>
+
     <div>
         <p>P filho direto da DIV</p>
 
