--- a/módulo-5/2-Introducao-ao-css/CSS PT.2/combinadoresSeletores~.html
+++ b/módulo-5/2-Introducao-ao-css/CSS PT.2/combinadoresSeletores~.html
@@ -9,6 +9,8 @@
 <body>
 
     <h1>Teste de Combinadores e Seletores (~)</h1>
+    <h3>Seleciona todos os irmãos seguintes de um seletor, no mesmo nível hierárquico.</h3>
+
     <div>
         <p>Parágrafo dentro da DIV</p>
         <span>Span dentro da DIV</span>
