--- a/módulo-5/2-Introducao-ao-css/CSS PT.2/exercicio/index.html
+++ b/módulo-5/2-Introducao-ao-css/CSS PT.2/exercicio/index.html
@@ -22,8 +22,7 @@
         </div>
     </header>
 
-    <main>
-        <div class="container">
+    <main class="container">
 
             <section class="product">
                 <img src="./produto/sofa.jpeg" alt="Sofá 3 Lugares Cama inBox Belém Retrátil e Reclinável Revestido em Suede Velusoft - 200cm de Largura - Cinza, ele esta virado de frente">
@@ -43,7 +42,10 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga corporis praesentium quasi earum in provident eius obcaecati beatae nostrum. Minus, vel sunt! Deserunt blanditiis ducimus natus laboriosam adipisci dignissimos sequi?</p>
             </section>
 
-        </div>
     </main>
+
+    <footer>
+        <h1>Design criado por Renan Lima</h1>
+    </footer>
 </body>
 </html>
