--- a/módulo-5/3-Layout/z-index.html
+++ b/módulo-5/3-Layout/z-index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Position Static</title>
+    <title>Z Index - Sobreposição</title>
     <link rel="stylesheet" href="styles/styleZIndex.css">
 </head>
 <body>
