--- a/módulo-5/4-Layout-flexivel/flex-direction-main-start-end.html
+++ b/módulo-5/4-Layout-flexivel/flex-direction-main-start-end.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex Direction - Prática</title>
+    <title>Flex Direction, Main Start and Main End - Prática</title>
     <link rel="stylesheet" href="./styles/flex-direction.css">
 </head>
 <body>
