Aprendizado sobre flex-direction

--- a/módulo-5/4-Layout-flexivel/flex-direction-main-start-end.html
+++ b/módulo-5/4-Layout-flexivel/flex-direction-main-start-end.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Direction, Main Start and Main End - Prática</title>
-    <link rel="stylesheet" href="./styles/flex-direction.css">
+    <link rel="stylesheet" href="./styles/flex-direction-main-start-end.css">
 </head>
 <body>
     <div class="container">
