--- a/módulo-5/4-Layout-flexivel/flex.html
+++ b/módulo-5/4-Layout-flexivel/flex.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Align Content, Justify Content</title>
-    <link rel="stylesheet" href="./styles/justify-content-alignitems.css">
+    <title>Flex</title>
+    <link rel="stylesheet" href="./styles/flex.css">
 </head>
 <body>
     <div class="container">
@@ -18,6 +18,12 @@
 
         <div class="item item3">
             3
+        </div>
+        <div class="item item4">
+            4
+        </div>
+        <div class="item item5">
+            5
         </div>
     </div>
 </body>
